button dark mode fixed

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,13 @@
   display: flex;
 }
 
+.button-div {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  align-items: center;
+}
+
 /*=============== BUTTON ===============*/
 
 /*=============== CHANGES ===============*/
@@ -158,6 +165,10 @@
   margin-left: 1.9rem;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 25rem;
+}
+
+.testing {
+  display: flex;
 }
 
 .button-bw-day:hover {
